2007-07-26 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSBitmapImageRep.h,
	* Source/NSBitmapImageRep.m: Add MacOSX 10.4 methods and constants.
	Code mostly by Nikolaus Schaller <hns@computer.org>.
	* Source/externs.m: Enable new string constant.

2007-07-25 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSApplication.h: Correct comment.
	* Source/NSApplication.m: Add error presenting methods.

2007-07-24 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSApplication.h,
	* Source/NSApplication.m: Add MacOSX 10.4 method declarations.
	* Source/externs.m: Define new string constant.

2007-07-23 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSAnimation.h: Remove unneeded includes.
	* Headers/Additions/GNUstepGUI/GSAnimator.h: Correct line endings.
	* Source/GSAnimator.m: Correct line endings and coding style.

2007-07-23 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSCell.h,
	* Source/NSCell.m,
	* Source/NSActionCell.m (-setControlView:): Add MacOSX 10.4 method.
	* Headers/AppKit/NSAlert.h,
	* Source/NSAlert.m (+alertWithError:): Add MacOSX 10.4 method.

2007-07-18 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSPrintInfo.h,
	* Source/NSPrintInfo.m (-imageablePageBounds,
	-localizedPaperName): New MacOSX method. Plus some general clean up.
	* Source/NSPrinter.m (-stringListForKey:inTable:,
	-isKey:inTable:): Don't raise exception on missing table.
	* Source/NSPrinter.m (-statusForTable:) Add check for corrct class.
	
2007-07-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-rectInMatrixSpace:, -translateToPoint:, 
	-makeIdentityMatrix): Use optimized primitive methods from base.
	* Source/NSAffineTransform.m (-scaleTo::): Try to handle rotation
	case better.  
	* Source/NSView.m (-scaleUnitSquareToSize:): Adjust origin too and
	handle rotation case.
	* Source/NSView.m (-setBounds:, setBoundsOrigin:): Try to handle
	rotation case better.

2007-07-04 Fred Kiefer <FredKiefer@gmx.de>
